RFA_MilestoneRM01/src/objects/BOD_Email_Log__c.object
<CustomObject>
    <fields>
        <fullName>Addition_EN__c</fullName>
        <label>Addition (EN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addition_JP__c</fullName>
        <label>Addition (JP)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOD_Meeting__c</fullName>
        <label>BOD Meeting</label>
        <referenceTo>BOD_Meeting__c</referenceTo>
        <relationshipLabel>BOD Email Log</relationshipLabel>
        <relationshipName>BOD_Email_Log</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CC_List__c</fullName>
        <label>CC List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Footer_Email_Comment_EN__c</fullName>
        <label>Footer Email Comment (EN)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Footer_Email_Comment_JP__c</fullName>
        <label>Footer Email Comment (JP)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Header_Email_Comment_EN__c</fullName>
        <label>Header Email Comment (EN)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Header_Email_Comment_JP__c</fullName>
        <label>Header Email Comment (JP)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Description__c</fullName>
        <label>Meeting Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name_EN__c</fullName>
        <label>Name (EN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_JP__c</fullName>
        <label>Name (JP)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_By__c</fullName>
        <label>Send By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sender</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BOD_Email_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>To_List__c</fullName>
        <label>To List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_JP__c</fullName>
        <label>Venue (JP)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <label>Venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Email履歴</label>
    <nameField>
        <displayFormat>EmailLog-{0000}</displayFormat>
        <label>BOD Email Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>